--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack -w",
+    "start": "webpack-dev-server --open",
+    "server": "node dev-server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,14 +17,21 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "csv-loader": "^3.0.2",
+    "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.11"
-  }
+  },
+  "sideEffecs": [
+    "*.css",
+    "*.js"
+  ]
 }
